--- a/src/style.css
+++ b/src/style.css
@@ -1,13 +1,68 @@
 @charset "UTF-8";
 
+* {
+    padding: 0;
+    margin: 0;
+}
+
 body {
     background-color: rgba(255, 140, 0, 0.732);
+}
+
+header {
+    text-align: center;
+    background-color: orangered;
+    padding: 8px;
+}
+
+header > h1 {
+    background-image: linear-gradient(to right, #000000, #1c1b1bfb, #373636);
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .container {
     background-color: orangered;
     width: 600px;
-    height: 450px;
-    margin: auto;
-    padding: 10px;
+    height: 490px;
+    margin: 90px auto;
+    padding: 12px;
+    border-radius: 10px;
+    box-shadow: 8px 8px 15px black;
+}
+
+.container-title {
+    text-align: center;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.container-info {
+    text-align: center;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    margin: 15px 0 0 0;
+}
+
+.box-name, .box-gas-quantity, .box-km {
+    padding: 20px;
+    margin: 5px 0 0 0;
+}
+
+h3 {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+input {
+    width: 99%;
+    height: 30px;
+    border-radius: 5px;
+}
+
+input:hover {
+    background-color: rgb(225, 139, 153);
+}
+
+.final-result {
+    text-align: center;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    margin: 20px 0 0 0;
 }
