--- a/src/style.css
+++ b/src/style.css
@@ -24,14 +24,15 @@ header > h1 {
 .container {
     background-color: orangered;
     width: 600px;
-    height: 550px;
-    margin: 90px auto;
+    height: 600px;
+    margin: 30px auto;
     padding: 12px;
     border-radius: 10px;
     box-shadow: 8px 8px 15px black;
 }
 
 .container-title {
+    margin-top: 15px;
     text-align: center;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
