--- a/src/style.css
+++ b/src/style.css
@@ -66,10 +66,27 @@ input:hover {
     width: 100px;
 }
 
+#refresh {
+    width: 100px;
+    height: 30px;
+    border-radius: 5px;
+    margin-top: 5px;
+}   
+
+h2 {
+    text-align: center;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.buttons {
+    display: flex;
+    margin-top: 10px;
+}
+
 .final-result {
     text-align: center;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    margin: 20px 0 0 0;
+    margin: auto;
 }
 
 @media (min-width: 300px) and (max-width: 768px) {
